# Opie

./: .gitignore  Cargo.toml  LICENSE  README.md  create_demo.sh  demo.cast  demo_script.sh
src/: agent.rs  config.rs  lib.rs  main.rs  session.rs  storage.rs
src/inference/: local.rs  mod.rs
src/tools/: mod.rs  patch.rs  read_file.rs  search_files.rs  terminal.rs  write_file.rs
