[package]
name = "opie"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Local inference - use llama-server via HTTP for now
# (simpler than building llama.cpp from source)
async-trait = "0.1"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
